# neural-showdown

./: .gitattributes  .gitignore  README.md  Showdown Local Eval Overlay.user.js  diagnose_memory.py  test_fix.ps1
trainer/: pyproject.toml
trainer/src/neural/: __init__.py  action_features.py  action_mapper.py  action_side_effects.py  (+102 more)
trainer/tests/: test_action_features_v4.py  test_action_features_v5.py  test_action_features_v6.py  test_action_features_v7.py  test_action_features_v7_action_risk_probability.py  test_action_features_v7_field_side_effects.py  test_action_features_v7_forced_decision_secondary_chance.py  test_action_features_v7_hp_side_effects.py  test_action_features_v7_item_effects.py  test_action_features_v7_timing_priority.py  test_action_features_v7_volatile.py  test_action_rank_manifest.py  test_action_ranker.py  test_action_stat_delta_fidelity.py  test_action_trace.py  test_action_value_search.py  test_agent_audit.py  test_analyze_decisions.py  test_analyze_state.py  test_awbc.py  test_belief_branch.py  test_benchmark_vnext_featuregen.py  test_config.py  test_damage_engine.py  test_dataset.py  test_diagnose_vnext_value_head.py  test_dynamic_move_mechanics_audit.py  test_featurize.py  test_gen9randbats_mechanics_completeness_audit.py  test_import_showdown_logs.py  test_improve_loop.py  test_latency.py  test_live_analysis.py  test_live_eval_calibration.py  test_live_eval_capture.py  test_live_private_features_v3.py  test_live_private_features_v4.py  test_live_private_features_v5.py  test_live_private_features_v6.py  test_live_private_features_v7.py  (+41 more)
(+328 files in other folders)
